@@ -728,7 +728,7 @@
             <tr>
                <td class="tabledata">interval</td>
                <td class="tabledata">No</td>
-               <td class="tabledata">Interval period in seconds. Default value is 300 (five minutes).</td>
+               <td class="tabledata">Interval period in seconds. Default value is 300 (five minutes). Maximum value is 3153600 (one year), but for the bulders that ship with CruiseControl the maximum practical value is 604800 (one week).</td>
             </tr>
          </table>
 
